--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # General Site Settings
 
 title: Donnatto | A Developer's Blog
-description: This is my blog. A Full Stack Developer in training. # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://blog.donnatto.me" # the base hostname & protocol for your site, e.g. http://example.com
+description: Un blog acerca del mundo de la tecnologia, creado con un enfoque apto para todos.
+baseurl: ""
+url: "https://blog.donnatto.me"
 
 
 #-------------------------------
@@ -15,10 +15,10 @@ author-avatar: pic-donnatto.jpg
 
 #-------------------------------
 # Contact links
-facebook:  https://facebook.com/edwin.dom # Add your Facebook handle
-linkedin: https://www.linkedin.com/in/edwin-dom/ # Add your Facebook handle
-github:   https://github.com/donnatto # Add your Facebook handle
-instagram: https://www.instagram.com/donnatto_ # Add your Facebook handle
+facebook:  https://facebook.com/edwin.dom
+linkedin: https://www.linkedin.com/in/edwin-dom/
+github:   https://github.com/donnatto
+instagram: https://www.instagram.com/donnatto_
 
 
 #-------------------------------
@@ -28,7 +28,7 @@ disqus-identifier: blog-donnatto
 
 #-------------------------------
 # Instagram Feed
-instafeed: true # To enable the instafeed, use the value true. To turn off use the value false.
+instafeed: true
 
 
 #-------------------------------
@@ -38,7 +38,7 @@ google-analytics: UA-147369813-1
 
 #-------------------------------
 # Newsletter
-mailchimp:  # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
+# mailchimp:
 
 
 #-------------------------------
