add robots.txt and edit linkedin url

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author-avatar: pic-donnatto.jpg
 #-------------------------------
 # Contact links
 facebook:  https://facebook.com/edwin.dom
-linkedin: https://www.linkedin.com/in/edwin-dom/
+linkedin: https://www.linkedin.com/in/donnatto/
 github:   https://github.com/donnatto
 instagram: https://www.instagram.com/donnatto_
 
