changes to include recent updates

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ facebook:  https://facebook.com/edwin.dom
 linkedin: https://www.linkedin.com/in/donnatto/
 github:   https://github.com/donnatto
 instagram: https://www.instagram.com/donnatto_
+donnatto: https://donnatto.me
 
 
 #-------------------------------
