Updated google analytics, removed ig feed

--- a/_config.yml
+++ b/_config.yml
@@ -29,12 +29,7 @@ disqus-identifier: blog-donnatto
 
 #-------------------------------
 # Instagram Feed
-instafeed: true
-
-
-#-------------------------------
-# Google Analytics
-google-analytics: UA-147369813-1
+instafeed: false
 
 
 #-------------------------------
